# sai2-interfaces

./: .gitignore  CMakeLists.txt  README.md  SAI2-INTERFACESConfig.cmake.in
.github/actions/build-repo/: action.yml
.github/workflows/: upload_artifact.yml
docs/: Doxyfile  README.md  config_files_details.md  const.js.html  docs_main.md  index.html  module-._const.html  module-._module_sai2-interface-display.html  module-._module_sai2-interface-enum.html  module-._module_sai2-interface-logger.html  module-._module_sai2-interface-plot.html  module-._module_sai2-interface-select.html  module-._module_sai2-interface-slider.html  module-._module_sai2-interface-toggle.html  module-._module_sai2-interface-trajectory-slider.html  module-._redis.html  module-._resize.html  module_sai2-interface-display.js.html  module_sai2-interface-enum.js.html  module_sai2-interface-logger.js.html  module_sai2-interface-plot.js.html  module_sai2-interface-select.js.html  module_sai2-interface-slider.js.html  module_sai2-interface-toggle.js.html  module_sai2-interface-trajectory-select.js.html  redis.js.html  resize.js.html  ui_overview.md
docs/00-fundamentals/: README.md
docs/01-toggle/: 01-toggle.html  01-toggle.md  README.md
docs/02-enum/: 02-enum.html  02-enum.md  README.md
docs/03-display/: 03-display.html  03-display.md  README.md  writekeys.py
docs/04-slider/: 04-slider.html  04-slider.md  README.md
docs/05-accordion/: 05-accordion.md  writekeys.py
docs/06-toggle-group/: 06-toggle-group.md  README.md
docs/07-select/: 07-select.md  README.md
docs/08-logger/: 08-logger.html  08-logger.md  README.md
docs/09-plot/: 09-plot.html  09-plot.md  README.md
docs/10-trajectory-select/: README.md
docs/11-orientation/: 11-orientation.html  writekeys.py
docs/ui_elements_details/: ui_docs_menu.md
docs/ui_elements_details/00-fundamentals/: README.md  writekeys.py
docs/ui_elements_details/01-toggle/: README.md
docs/ui_elements_details/02-enum/: 02-enum.html
docs/ui_elements_details/04-slider/: 04-slider.html  README.md
docs/ui_elements_details/07-select/: 07-select.html  writekeys.py
docs/ui_elements_details/09-orientation/: README.md
docs/ui_elements_details/accordion/: README.md  accordion.html
docs/ui_elements_details/axis_setter/: README.md  axis_setter.html
docs/ui_elements_details/config_selector/: README.md  config_selector.html
docs/ui_elements_details/display/: README.md  display.html
docs/ui_elements_details/enum/: README.md  enum.html
docs/ui_elements_details/orientation/: README.md  orientation.html  writekeys.py
docs/ui_elements_details/plot/: README.md  plot.html  writekeys.py
docs/ui_elements_details/plot_button/: README.md  plot_button.html
docs/ui_elements_details/setkey/: README.md  setkey.html
docs/ui_elements_details/simple_data_structure_setter/: README.md  simple_data_structure_setter.html  writekeys.py
docs/ui_elements_details/slider/: README.md  slider.html  writekeys.py
examples/: 01-simviz.cpp  AuxPandaSimvizOnly.cpp  CMakeLists.txt  MainRedisInterfaceExample.cpp  rbot.urdf  simviz_config.xml  simviz_config_1.xml  simviz_config_2.xml  simviz_config_3.xml  world2.urdf  world3.urdf
examples/01-kuka_free_space_motion/: 01-kuka_free_space_motion.cpp  CMakeLists.txt  kuka_iiwa.urdf
examples/01-simviz-only/: 01-simviz.cpp  CMakeLists.txt  config_2_kukas.xml  config_panda.xml  config_pendulum.xml  simviz_config_kukas.xml  simviz_config_panda.xml  simviz_config_pendulum.xml  webui.html
examples/02-simviz-plus-controller/: 02-control.cpp  02-simviz.cpp  CMakeLists.txt  config_panda_simviz_controller.xml  panda_controller_config.xml  simviz_config_panda.xml  webui.html
examples/03-main-interface/: 03-main-interface.cpp  CMakeLists.txt  config_humanoid.xml  config_kukas.xml  config_panda.xml  main_config.xml  panda_controller_config.xml  webui_template.html
examples/config_files/: aa_detailled_panda_control_only.xml  aa_detailled_panda_haptic_control.xml  aa_detailled_panda_simviz_only.xml  double_kuka_simviz_control.xml  double_kuka_simviz_no_control.xml  humanoid_simviz_control.xml  panda_simviz_control.xml  panda_simviz_no_control.xml
examples/config_files/webui_generated_file/: webui.html
examples/multi_primitives/: CMakeLists.txt  multi_primitives.cpp  test_redis.cpp
examples/urdf/robot_models/: rbot.urdf
examples/urdf/robot_models/iiwa7/meshes/: link6.mtl
examples/urdf/robot_models/panda/: panda_arm_box.urdf  panda_arm_sphere.urdf
examples/urdf/world_files/: world_kukas.urdf  world_panda.urdf  world_pendulums.urdf
examples/world_files/: world_humanoid.urdf  world_kukas.urdf  world_panda.urdf  world_pendulums.urdf
interface/: catmullrom.py  csv_plotter.py  online_plot.py  redis_cache.py  redis_logger.py  requirements.txt  server.py  trajectory_runner.py
interface/web/: test.txt  tutorial.txt
src/: MainRedisInterface.cpp  MainRedisInterface.h
src/controller/: HapticDeviceControllerConfig.h  HapticDeviceControllerConfigParser.cpp  RobotControllerConfig.h  RobotControllerConfigParser.cpp  RobotControllerConfigParser.h  RobotControllerRedisInterface.cpp  RobotControllerRedisInterface.h
src/controllers/: ControllerRedisInterface.h
src/helpers/: CommonConfigs.h  ConfigParserHelpers.cpp  ConfigParserHelpers.h
src/simviz/: SimVizConfig.h  SimVizConfigParser.cpp  SimVizConfigParser.h  SimVizRedisInterface.cpp  SimVizRedisInterface.h
templates/: blank_left_plot_logger.html  four_plots_logger.html  joint_posori_traj_plot_logger.html  plot_logger.html  posori_plot_logger.html  two_plots_logger.html
tutorials/: README.md
tutorials/01-joint/: 01-joint.html  README.md  writekeys.py
tutorials/02-joint-posori/: 02-joint-posori.html  README.md  writekeys.py
tutorials/03-settings/: 03-settings.html  README.md  writekeys.py
tutorials/04-joint-posori-traj-plot-logger/: joint_posori_traj_plot_logger.html
tutorials/04-traj-plot-logger/: 04-traj-plot-logger.html  README.md  writekeys.py
ui/: csv_plotter.py  server.py
ui/server/: HTTPRequestHandler.py  logger.py  server.py
ui/web/: index.html
(+106 files in other folders)
